--- a/capstone_project.ipynb
+++ b/capstone_project.ipynb
@@ -174,24 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not bytes",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest.png\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 2\u001b[0m     \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchat_graph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw_mermaid_png\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \n",
-      "\u001b[1;31mTypeError\u001b[0m: write() argument must be str, not bytes"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(\"test.png\", \"w\") as f:\n",
-    "    f.write(str(chat_graph.get_graph().draw_mermaid_png())) "
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "\n",
+    "stream = BytesIO(chat_graph.get_graph().draw_mermaid_png())\n",
+    "image = Image.open(stream).convert(\"RGBA\")\n",
+    "image.save(\"test.png\")\n",
+    "# with open(\"test.png\", \"w\") as f:\n",
+    "#     f.write(str()) "
    ]
   },
   {
